@@ -1,3 +1,6 @@
+- Rendering of the icon in the title bar of the main window has been
+  fixed in Microsoft Windows.
+
 v1.5
 - Fixed dead link in "About" dialog
 - Upgraded dependencies
